# documentation

./: .gitignore  .gitlab-ci.yml  FAQ.rst  LANG  Pipfile  README.md  Readme.md  SECURITY.md  build.sh  build_dev.sh  conf.py  deploy.sh  deploy_dev.sh  how_to_contribute.md  how_to_contribute.rst  index.rst  pyproject-poetry.toml  pyproject.toml  requirements.txt  robots.txt  sitemap-index.xml  update.sh  user_guide.rst
_build/gettext/: how_to_contribute.pot  index.pot  user_guide.pot
_build/html/: .buildinfo  genindex.html  how_to_contribute.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
_themes/theme/: LICENSE  breadcrumbs.html  footer.html  layout.html
admin_guide/: admin_panel.rst  customization.rst  help-desk.rst  index.rst  installation.rst  maintenance.rst  support_panel.rst
dev_guide/: basics.rst  client.rst  code.rst  contribute.rst  database.rst  general.rst  index.rst  setup.rst
dev_guide/client/: architecture.rst  chainpad.rst  framework.rst  inner.rst  outer.rst  requirejs.rst  translations.rst  worker.rst
user_guide/: accessibility.rst  accounts.md  applications.md  applications.rst  collaboration.md  collaboration.rst  drive.md  drive.rst  index.md  index.rst  instances.md  instances.rst  keyboard_shortcuts.rst  security.md  security.rst  share_and_access.md  share_and_access.rst  support.rst  user_account.md  user_account.rst
user_guide/accessibility/: toolbar.rst
user_guide/apps/: code.md  code.rst  diagram.rst  document.rst  form.rst  forms.rst  general.md  general.rst  kanban.md  kanban.rst  poll.md  poll.rst  presentation.rst  richtext.md  richtext.rst  sheets.md  sheets.rst  slides.md  slides.rst  whiteboard.md  (+1 more)
www/: robots.txt
(+2081 files in other folders)
