[tool.poetry]
name = "CryptPad Documentation"
version = "4.2.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC-BY"

[tool.poetry.dependencies]
python = "^3.9.1"
Sphinx = "^3.5.3"
recommonmark = "^0.7.1"
sphinx-intl = "^2.0.1"
sphinx-markdown-tables = "^0.0.15"
sphinx_fontawesome = "^0.0.6"
sphinx-sitemap = "^2.2.0"
Jinja2 = "<3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
