[project]
authors = [
    {name = "The CryptPad Team", email = "contact@cryptpad.org"},
]
license = {text = "CC-BY"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "Sphinx<6.0.0,>=5.3.0",
    "recommonmark<1.0.0,>=0.7.1",
    "sphinx-intl<3.0.0,>=2.0.1",
    "sphinx-markdown-tables<1.0.0,>=0.0.17",
    "sphinx-fontawesome<1.0.0,>=0.0.6",
    "sphinx-sitemap<3.0.0,>=2.2.1",
    "Jinja2<4.0.0,>=3.1.4",
]
name = "documentation"
version = "2025.3.0"
description = "CryptPad official documentation"
readme = "README.md"
